2013-01-13  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix compilation with older compilers.

	* grub-core/Makefile.core.def (mpi): Add mpi-inline.c.
	* grub-core/lib/libgcrypt_wrap/cipher_wrap.h: Remove redundant
	declarations.
	* grub-core/lib/posix_wrap/string.h: Include sys/types.h.
	* grub-core/lib/posix_wrap/sys/types.h: Add common types.
	* grub-core/lib/xzembed/xz_dec_lzma2.c (dict_put): Replace byte
	identifier with b.
	* grub-core/lib/xzembed/xz_dec_stream.c (dec_vli): Likewise.
	* include/grub/crypto.h: Add type defines.
	* util/import_gcrypth.sed: Remove duplicate type defines.

2013-01-13  Vladimir Serbinenko  <phcoder@gmail.com>

	New command list_trusted.

	* grub-core/commands/verify.c (grub_cmd_list): New function.

2013-01-13  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mkimage.c (generate_image): Fix "size of public key"
	info message.

2013-01-13  Colin Watson  <cjwatson@ubuntu.com>

	Remove nested functions from PCI iterators.

	* grub-core/bus/pci.c (grub_pci_iterate): Add hook_data argument,
	passed to hook.  Update all callers to pass appropriate hook data.
	* grub-core/bus/emu/pci.c (grub_pci_iterate): Likewise.
	* include/grub/pci.h (grub_pci_iteratefunc_t): Add data argument.
	Remove NESTED_FUNC_ATTR from here and from all users.
	(grub_pci_iterate): Update prototype.
	* grub-core/bus/cs5536.c (grub_cs5536_find: hook): Make static
	instead of nested.  Rename to ...
	(grub_cs5536_find_iter): ... this.
	* grub-core/kern/efi/mm.c (stop_broadcom: find_card): Likewise.
	* grub-core/kern/mips/loongson/init.c (init_pci: set_card):
	Likewise.
	* grub-core/kern/vga_init.c (grub_qemu_init_cirrus: find_card):
	Likewise.
	* grub-core/video/bochs.c (grub_video_bochs_setup: find_card):
	Likewise.
	* grub-core/video/cirrus.c (grub_video_cirrus_setup: find_card):
	Likewise.
	* grub-core/video/efi_uga.c (find_framebuf: find_card): Likewise.
	* grub-core/video/radeon_fuloong2e.c
	(grub_video_radeon_fuloong2e_setup: find_card): Likewise.