@@ -327,7 +327,7 @@ probe (const char *path, char **device_names, char delim)
     {
       grub_path = canonicalize_file_name (path);
       if (! grub_path)
-	grub_util_error (_("failed to get canonical path of %s"), path);
+	grub_util_error (_("failed to get canonical path of `%s'"), path);
       device_names = grub_guess_root_devices (grub_path);
       free (grub_path);
     }
