@@ -1,5 +1,15 @@
 2013-01-13  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/kern/emu/hostdisk.c (read_device_map): Explicitly
+	delimit path in strings using quotes.
+	* util/getroot.c (grub_guess_root_devices): Likewise.
+	(grub_make_system_path_relative_to_its_root): Likewise.
+	* util/grub-probe.c (probe): Likewise.
+	* util/ieee1275/ofpath.c (find_obppath): Likewise.
+	(xrealpath): Likewise.
+
+2013-01-13  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Fix compilation with older compilers.
 
 	* grub-core/Makefile.core.def (mpi): Add mpi-inline.c.
